<resources>
    <string name="app_name">Loud Mouth\s Pocket RPGenerator</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_update_char">Update Character</string>
    <string name="action_update_weapon">Update Weapon</string>
    <string name="action_update_armor">Update Armor</string>
    <string name="action_view_char">View Characters</string>
    <string name="action_view_mon">View Monsters</string>
    <string name="action_view_weapon">View Weapons</string>
    <string name="action_view_armor">View Armor</string>
    <string name="action_delete_char">Delete Character</string>
    <string name="action_delete_mon">Delete Monsters</string>
    <string name="action_delete_weapon">Delete Weapons</string>
    <string name="action_delete_armor">Delete Armor</string>


    <!-- Strings used for fragments for navigation -->
    <string name="Main_menu">First Fragment</string>
    <string name="Char_Creator">Character Creator</string>
    <string name="Mon_Creator">Monster Creator</string>
    <string name="Weapon_Creator">Weapon Creator</string>
    <string name="Armor_Creator">Armor Creator</string>
    <string name="Smithy">Smithy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="weapon">Weapons</string>
    <string name="armor">Armor</string>

    <string name="char_name">Name</string>
    <string name="char_align">Alignment</string>
    <string name="char_race">Race</string>
    <string name="char_class">Class</string>

    <string name="mon_name">Name</string>
    <string name="armor_class">Armor Class</string>
    <string name="hp">Hit Points</string>
    <string name="exp">Experience</string>

    <string name="save_char">Save Character</string>
    <string name="save_mon">Save Monster</string>
    <string name="save_weapon">Save Weapon</string>
    <string name="save_armor">Save Armor</string>

    <string name="button_back">BACK</string>

    <string name="weap_name">Name</string>
    <string name="dmg">Damage</string>
    <string name="dmg_type">Damage Type</string>
    <string name="weap_type">Weapon Type</string>
    <string name="weap_traits">Weapon Traits</string>
    <string name="weap_property">Weapon Property</string>

    <string name="arm_name">Name</string>
    <string name="arm_str">Strength</string>
    <string name="arm_class">Armor Class</string>
    <string name="arm_traits">Armor Traits</string>
    <string name="arm_property">Armor Property</string>
    <string name="arm_type">Armor Type</string>

</resources>