<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharCreator">

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/char_name" />

        <EditText
            android:id="@+id/char_name"
            android:layout_width="140dp"

            android:autofillHints="Name" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/char_align" />

        <EditText
            android:id="@+id/char_align"
            android:layout_width="140dp"

            android:autofillHints="Name" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/char_race" />

        <EditText
            android:id="@+id/char_race"
            android:layout_width="140dp"

            android:autofillHints="Name" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/char_class" />

        <EditText
            android:id="@+id/char_class"
            android:layout_width="140dp"

            android:autofillHints="Name" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/save_char"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/save_char" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button

            android:id="@+id/BackButton"
            android:backgroundTint="@android:color/holo_red_dark"

            android:text="@string/previous" />
    </TableRow>
</TableLayout>
