<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonCreator">

    <TableRow android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/mon_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:autofillHints="Click here to choose an Image" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <TextView android:text="Click above to Upload Image" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="Image Name" />

        <EditText
            android:id="@+id/mon_image_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Image Name" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/mon_name" />

        <EditText
            android:id="@+id/mon_name"
            android:layout_width="140dp"
            android:autofillHints="Name" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/armor_class" />

        <EditText
            android:id="@+id/armor_class"
            android:layout_width="140dp"

            android:autofillHints="AC" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/hp" />

        <EditText
            android:id="@+id/hp"
            android:layout_width="140dp"

            android:autofillHints="hit points" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="10dp"
            android:text="@string/exp" />

        <EditText
            android:id="@+id/exp"
            android:layout_width="140dp"

            android:autofillHints="Experience" />
    </TableRow>

    <TableRow android:padding="20dp"></TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/save_mon"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/save_mon" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button

            android:id="@+id/BackButton"
            android:backgroundTint="@android:color/holo_red_dark"

            android:text="@string/previous" />
    </TableRow>
</TableLayout>