<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Main_Menu_Nav">

        <fragment
        android:id="@+id/Main_Menu_Nav"
        android:name="com.example.groupproject_2020.MainMenu"
        android:label="@string/Main_menu"
        tools:layout="@layout/mainmenu">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/Char_Creator_Nav" />
        <action
            android:id="@+id/action_Main_Menu_Nav_to_Mon_Creator_Nav"
            app:destination="@id/Mon_Creator_Nav" />
        <action
            android:id="@+id/action_Main_Menu_Nav_to_Smithy_Nav"
            app:destination="@id/Smithy_Nav" />
    </fragment>
    <fragment
        android:id="@+id/Char_Creator_Nav"
        android:name="com.example.groupproject_2020.CharCreator"
        android:label="@string/Char_Creator"
        tools:layout="@layout/charcreator">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/Main_Menu_Nav" />
    </fragment>

    <fragment
        android:id="@+id/Mon_Creator_Nav"
        android:name="com.example.groupproject_2020.MonCreator"
        android:label="@string/Mon_Creator"
        tools:layout="@layout/moncreator">

        <action
            android:id="@+id/action_Mon_Creator_Nav_to_Main_Nav"
            app:destination="@id/Main_Menu_Nav" />
    </fragment>

    <fragment
        android:id="@+id/Smithy_Nav"
        android:name="com.example.groupproject_2020.Smithy"
        android:label="@string/Smithy"
        tools:layout="@layout/smithy">

        <action
            android:id="@+id/action_Smithy_Nav_to_Main_Menu_Nav"
            app:destination="@id/Main_Menu_Nav" />
        <action
            android:id="@+id/action_Smithy_Nav_to_Weapon_Creator"
            app:destination="@id/Weapon_Creator" />
        <action
            android:id="@+id/action_Smithy_Nav_to_Armor_Creator"
            app:destination="@id/Armor_Creator" />

    </fragment>
    <fragment
        android:id="@+id/Weapon_Creator"
        android:name="com.example.groupproject_2020.WeaponCreator"
        android:label="@string/Weapon_Creator"
        tools:layout="@layout/weapon">
        <action
            android:id="@+id/action_Weapon_Creator_to_Smithy_Nav"
            app:destination="@id/Smithy_Nav" />
    </fragment>

    <fragment
        android:id="@+id/Armor_Creator"
        android:name="com.example.groupproject_2020.WeaponCreator"
        android:label="@string/Armor_Creator"
        tools:layout="@layout/armor">
        <action
            android:id="@+id/action_Armor_Creator_to_Smithy_Nav"
            app:destination="@id/Smithy_Nav" />
    </fragment>
</navigation>