<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Smithy">

    <Button
        android:id="@+id/Weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:drawableTop="@drawable/sword"
        android:text="@string/weapon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Armor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:drawableTop="@drawable/armor"
        android:text="@string/armor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/Weapon"
        app:layout_constraintTop_toBottomOf="@+id/Weapon" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Weapon"
        app:layout_constraintVertical_bias="0.63" />

</androidx.constraintlayout.widget.ConstraintLayout>